--- a/_config.yml
+++ b/_config.yml
@@ -99,10 +99,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : google # false (default), "google", "google-universal", "custom"
+  provider               : #google # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-160267528-1"
-    anonymize_ip         : false # true, false (default)
+    tracking_id          : #"UA-160267528-1"
+    anonymize_ip         : #false # true, false (default)
 
 
 # Site Author
